fixed footer cutoff issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+Button{
+  margin: 25px;
+}
 
 .App {
   text-align: center;
@@ -8,20 +10,15 @@
   flex-flow: column;
 }
 
-Button{
-  margin: 25px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-footer{
-  background-color: yellow;
+.App-header {
+  min-height: 50px;
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  background-color: darkblue;
 }
 
 .App-body{
@@ -29,22 +26,15 @@ Button{
   flex: 1;
   display: flex;
   flex-direction: column;
+  padding-bottom: 80px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  min-height: 50h;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  background-color: darkblue;
+.App-footer{
+  background-color: yellow;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .App-details {
@@ -56,17 +46,9 @@ Button{
   font-size: calc(10px + 2vmin);
   background-color: #a8e1f7;
 }
+
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .container{
@@ -89,6 +71,7 @@ Button{
   margin: 20px 5px ;
   border-radius: 0.62em;
 }
+
 .basic-page-container {
   flex: 1; /* Expand to fill remaining space */
   overflow-y: auto; /* Add scrollbars if content exceeds height */
